--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.0.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.0.0",
+    "react-scroll-up-button": "^1.6.4",
     "react-yandex-maps": "^3.0.2",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0"
