--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.0.0",
     "react-scroll-up-button": "^1.6.4",
+    "react-share": "^4.1.0",
     "react-yandex-maps": "^3.0.2",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0"
