--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-draft-wysiwyg": "^1.13.2",
     "react-helmet": "^5.2.1",
     "react-image-gallery": "^1.0.7",
+    "react-js-pagination": "^3.0.3",
     "react-modal-image": "^2.5.0",
+    "react-paginate": "^6.4.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-router-redux": "^4.0.8",
