--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.4",
     "font-awesome": "^4.7.0",
+    "html-react-parser": "^0.14.0",
     "html-to-draftjs": "^1.4.0",
     "jquery": "^3.4.1",
     "node-sass": "^4.12.0",
