--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "3.0.0",
     "react-scroll-up-button": "^1.6.4",
     "react-share": "^4.1.0",
+    "react-swipeable": "^5.5.1",
     "react-yandex-maps": "^3.1.0",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0"
