--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@loadable/component": "^5.14.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "bootstrap": "^4.3.1",
     "draft-js": "^0.10.5",
     "draftjs-to-html": "^0.8.4",
+    "express": "^4.17.1",
     "font-awesome": "^4.7.0",
+    "history": "^5.0.0",
     "html-react-parser": "^0.14.0",
     "html-to-draftjs": "^1.4.0",
+    "ignore-styles": "^5.0.1",
     "jquery": "^3.4.1",
+    "jsdom": "^16.4.0",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
@@ -26,6 +31,7 @@
     "react-modal": "^3.11.2",
     "react-modal-image": "^2.5.0",
     "react-redux": "^7.0.3",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.0.0",
     "react-router-redux": "^4.0.8",
     "react-scripts": "3.0.0",
@@ -40,7 +46,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "ssr": "node server/index.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -58,7 +65,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/register": "^7.12.1",
     "@material-ui/icons": "^4.9.1",
     "redux-devtools": "^3.7.0"
-  }
+  },
+  "proxy": "http://localhost:3000/"
 }
